# vcv-CaptainsSounds

./: .clang-format  .cursorrules  .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CaptainsSounds.code-workspace  LICENSE.md  Makefile  README.md  cpt.Testing Rack-2.6.4.vcv  cpt.Testing Rack.vcv  plugin.json  renovate.json
.cursor/rules/: base.mdc
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/: FUNDING.yml  dependabot.yml
.github/actions/build_linux/: Dockerfile  action.yml  entrypoint.sh
.github/actions/build_osx/: Dockerfile  action.yml  entrypoint.sh
.github/actions/build_win/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: add-to-dashboard.yml  buildDevelop.yml  buildRelease.yml  renovate.yml
assets/: VBNO.ai
res/: 90hBlank-1.ai  90hBlank-2.ai  90hBlank-4.ai  90hBlank-8.ai  CSlogo.ai  DBug.ai  DIP.ai  Dip.ai  IMO.ai  MIO.ai  Nip.ai  VBNO.ai
res/Components/: Round909Jack.ai  Round909Knob.ai  SmallRound909Knob.ai
src/: Blanks.cpp  Blanks.hpp  CSModule.cpp  CSModule.hpp  CSModuleWidget.cpp  CSModuleWidget.hpp  DBug.cpp  DBug.hpp  Dip.cpp  Dip.hpp  IMO.cpp  IMO.hpp  MIO.cpp  MIO.hpp  Nip.cpp  Nip.hpp  Oscillator.cpp  Oscillator.hpp  Pow.cpp  Pow.hpp  Round909Knob.ai  SoundMath.cpp  VBNO.cpp  VBNO.hpp  VCOh.cpp  captainssounds.hpp  components.hpp  dsp.hpp  dsp.test.cpp  grid.cpp  grid.hpp  plugin.cpp  plugin.hpp
src/filters/: HuovilainenMoogFilter.hpp  StilsonMoogFilter.hpp  base.hpp
